k8s-manifests/postgresdb.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: demo-postgres
spec:
  serviceName: demo-postgres
  replicas: 1
  selector:
    matchLabels:
      app: demo-postgres
  template:
    metadata:
      labels:
        app: demo-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:14.2-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: demo-postgres
spec:
  selector:
    app: demo-postgres
  ports:
    - protocol: TCP
      port: 5432
