k8s-manifests/webapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-web
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: demo-web
  template:
    metadata:
      labels:
        app: demo-web
    spec:
      containers:
      - name: demo-web
        image: mohanpiru/compress-budgetapp:latest
        command: ["/bin/sh"]
        args: ["-c", "bundle exec rake db:create db:migrate && bundle exec rails s -p 3000 -b '0.0.0.0'"]
        ports:
        - containerPort: 3000


---
apiVersion: v1
kind: Service
metadata:
  name: budget-app-svc
  labels: 
    app: demo-web
spec:
  selector:
    app: demo-web
  ports:
    - protocol: TCP
      targetPort: 3000
      port: 31000
  type: NodePort
