k8s-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: budget-app-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: budget-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: budget-app-svc
            port:
              number: 31000
